--- a/src/Lighthouse/Lighthouse.csproj
+++ b/src/Lighthouse/Lighthouse.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Akka.Cluster" Version="1.3.1" />
     <PackageReference Include="Akka.Logger.NLog" Version="1.3.0-beta" />
     <PackageReference Include="Akka.Remote" Version="1.3.1" />
+    <PackageReference Include="Petabridge.Cmd.Cluster" Version="0.3.1" />
     <PackageReference Include="Topshelf" Version="3.2.0" />
     <PackageReference Include="Topshelf.NLog" Version="3.2.0" />
   </ItemGroup>
